<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:text=""
        android:textColor="@color/primary_color"
        android:textSize="44sp"
        android:gravity="end|bottom"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:background="@color/divider_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_7"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_8"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_9"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/division"
            android:textSize="30sp"
            android:textColor="@color/accent_color"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_4"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_5"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_6"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/multiplication"
            android:textSize="30sp"
            android:textColor="@color/accent_color"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_1"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_2"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_3"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/subtruction"
            android:textSize="30sp"
            android:textColor="@color/accent_color"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/_0"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textColor="@color/primary_text"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/clear"
            android:textSize="30sp"
            android:textColor="@color/accent_color"
            android:backgroundTint="@color/white"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btnAddition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/addition"
            android:textSize="30sp"
            android:textColor="@color/accent_color"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="3dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/accent_color"
            android:onClick="onEqual"/>

    </LinearLayout>

</LinearLayout>